Fixed weird shit with android compatibility