@@ -160,7 +160,7 @@ public class SettingsAdapter extends RecyclerView.Adapter<SettingsAdapter.ViewHo
 
 							var sorted = new ArrayList<>(items).stream()
 									.sorted((a, b) -> a.getTitle().compareToIgnoreCase(b.getTitle()))
-									.toList();
+									.collect(Collectors.toList());
 
 							AweryApp.runOnUiThread(() -> {
 								createRadioButtons(radioGroup, sorted, selectedItem);
@@ -178,7 +178,7 @@ public class SettingsAdapter extends RecyclerView.Adapter<SettingsAdapter.ViewHo
 										settingItem.getKey(),
 										settingItem.getTitle(parent.getContext()),
 										settingItem.getKey().equals(selected)))
-								.toList(), selectedItem);
+								.collect(Collectors.toList()), selectedItem);
 
 						contentView.addView(radioGroup);
 					} else {
